<?xml version="1.0"?>
<package format="2">
    <name>influxdb_test</name>
    <version>0.0.1</version>
    <description>influxdb_test</description>

    <author email="test@test.com">Test</author>
    <maintainer email="test@test.com">Test</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    
    <depend>python3-influxdb-client-pip</depend>
    <depend>rospy</depend>
</package>
